# newChess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  Figures.h  GameLogic.h  Gameplay.h  Logic.h  Makefile  chess  cmake_install.cmake  main.cpp  spam.h
ChessPieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
Shapes/: Brishop.h  King.h  Pawn.h  Queen.h  Rook.h  knight.h
Windows/: MainMenu.h  MenuESC.h  Play.h  TypeBoard.h
window/: MainMenu.h  PlayMenu.h  Settings.h
x64/Debug/: Chess.exe.recipe  Chess.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
